src/objects/Ven_Key_Performance_Indicator__c.object
<CustomObject>
    <description>Liste aller KPIs genutzt durch SevenVentures</description>
    <fields>
        <fullName>Ven_Category3__c</fullName>
        <description>KPI Kategorie #3</description>
        <label>Category3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aktiva</fullName>
                </value>
                <value>
                    <fullName>Earnings</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Passiva</fullName>
                </value>
                <value>
                    <fullName>Revenues</fullName>
                </value>
                <value>
                    <fullName>Traffic channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Category_KPI__c</fullName>
        <inlineHelpText>Bitte eine Kategorie auswählen</inlineHelpText>
        <label>Category (KPI)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial KPIs</fullName>
                </value>
                <value>
                    <fullName>Operational KPIs</fullName>
                </value>
                <value>
                    <fullName>Online KPIs</fullName>
                </value>
                <value>
                    <fullName>Media KPIs</fullName>
                </value>
                <value>
                    <fullName>P&amp;L</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Registrations</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Freemium</fullName>
                </value>
                <value>
                    <fullName>Gutscheincodes</fullName>
                </value>
                <value>
                    <fullName>Wetter.com</fullName>
                </value>
                <value>
                    <fullName>Preis24</fullName>
                </value>
                <value>
                    <fullName>Dedendo</fullName>
                </value>
                <value>
                    <fullName>Tropo</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Description__c</fullName>
        <inlineHelpText>Bitte geben Sie eine Beschreibung des KPIs ein</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ven_Filter__c</fullName>
        <inlineHelpText>Bitte stellen Sie ein Filterkriterium ein</inlineHelpText>
        <label>Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>e-commerce</fullName>
                </value>
                <value>
                    <fullName>Click-out model</fullName>
                </value>
                <value>
                    <fullName>Freemium</fullName>
                </value>
                <value>
                    <fullName>Gutscheincodes</fullName>
                </value>
                <value>
                    <fullName>Wetter.com</fullName>
                </value>
                <value>
                    <fullName>Preis24</fullName>
                </value>
                <value>
                    <fullName>Dedendo</fullName>
                </value>
                <value>
                    <fullName>Tropo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Format__c</fullName>
        <description>Formatierung des Wertes im Strategic Report</description>
        <inlineHelpText>K - Tausender-Darstellung
M - Mio-Darstellung
Anzahl der Nachkommastellen
z.B. M2 =&gt; 3,21 M</inlineHelpText>
        <label>Formats</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Level_KPI__c</fullName>
        <description>Weitere Gruppierungsebene nach Catagory und Subcategory</description>
        <inlineHelpText>Weitere Gruppierungsebene nach Catagory und Subcategory</inlineHelpText>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Operator__c</fullName>
        <description>Gibt an wie die KPI Werte zusammengefasst werden</description>
        <inlineHelpText>Value - Wert zum ausgewählten Reporting-Stichtag
Sum - Summe year-to-date zum ausgewählten Reporting-Stichtag
Average - Mittelwert year-to-date zum ausgewählten Reporting-Stichtag</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Sub_Category__c</fullName>
        <inlineHelpText>Bitte ggf. eine Unterkategorie wählen</inlineHelpText>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>P&amp;L</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Ratio</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Customers</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Traffic costs</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Social Commerce</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing Costs</fullName>
                </value>
                <value>
                    <fullName>Fulfillments Costs</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Liabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Supplier__c</fullName>
        <inlineHelpText>Bitte wählen Sie einen Supplier</inlineHelpText>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Company / Webtrekk</fullName>
                </value>
                <value>
                    <fullName>Webtrekk</fullName>
                </value>
                <value>
                    <fullName>Flaconi</fullName>
                </value>
                <value>
                    <fullName>Searchmetrics</fullName>
                </value>
                <value>
                    <fullName>Google Analytics</fullName>
                </value>
                <value>
                    <fullName>TV Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Unit__c</fullName>
        <description>Maßeinheit des KPIs</description>
        <inlineHelpText>Bitte stellen Sie die Maßeinheit ein</inlineHelpText>
        <label>Unit</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Key Performance Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ven_Category_KPI__c</columns>
        <columns>Ven_Sub_Category__c</columns>
        <columns>Ven_Supplier__c</columns>
        <columns>Ven_Filter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Key Performance Indicator-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Performance Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>